src/assets/styles/base.css
/*Headings*/
.heading-sub{
    font-size: var(--fs-lg);
    line-height: var(--lh-medium-tight);
    font-weight: var(--fw-regular);
}
.heading-display{
    font-size: var(--fs-xxl);
    line-height: var(--lh-small);
    font-weight: var(--fw-regular);
    font-family: 'LibreBaskerville';
}
h1{
    font-size: var(--fs-xl);
    line-height: var(--lh-small);
    font-weight: var(--fw-regular);
}
h2{
    font-size: var(--fs-md);
    line-height: var(--lh-medium-tight);
    font-weight: var(--fw-regular);
}
h3{
    font-size: var(--fs-sm);
    line-height: var(--lh-small);
    font-weight: var(--fw-bold);
}

/*Base text*/
p{
    font-size: var(--fs-base);
    line-height: var(--lh-large);
    font-weight: var(--fw-regular);
}
a{
    font-size: var(--fs-base);
    line-height: var(--lh-large);
    font-weight: var(--fw-regular);
}

/*Labels*/
.label-small{
    font-size: var(--fs-meta);
    line-height: var(--lh-large);
    font-weight: var(--fw-regular);
}
.label-small-bold{
    font-size: var(--fs-meta);
    line-height: var(--lh-large);
    font-weight: var(--fw-bold);
}
.label-regular{
    font-size: var(--fs-base);
    line-height: var(--lh-large);
    font-weight: var(--fw-regular);
}
.label-medium{
    font-size: var(--fs-lead);
    line-height: var(--lh-large-tight);
    font-weight: var(--fw-regular);
}
.label-medium-bold{
    font-size: var(--fs-lead);
    line-height: var(--lh-large-tight);
    font-weight: var(--fw-bold);
}
.label-big{
    font-size: var(--fs-md);
    line-height: var(--lh-medium-tight);
    font-weight: var(--fw-regular);
}

/*Buttons*/
.btn-reg{
    font-size: var(--fs-base);
    line-height: var(--lh-large);
    font-weight: var(--fw-regular);
}
.btn-medium{
    font-size: var(--fs-lead);
    line-height: var(--lh-large-tight);
    font-weight: var(--fw-regular);
}
.btn-big{
    font-size: var(--fs-md);
    line-height: var(--lh-medium-tight);
    font-weight: var(--fw-regular);
}
.input{
    font-size: var(--fs-base);
    line-height: var(--lh-large);
    font-weight: var(--fw-regular);
}

/*Menu*/
.menu-main{
    font-size: var(--fs-lead);
    line-height: var(--lh-large-tight);
    font-weight: var(--fw-bold);
}
.menu-secondary{
    font-size: var(--fs-meta);
    line-height: var(--lh-large);
    font-weight: var(--fw-bold);
}
.menu-footer{
    font-size: var(--fs-base);
	line-height: var(--lh-medium);
    font-weight: var(--fw-regular);
}

